--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -62,6 +62,7 @@
     "moment": "^2.30.1",
     "next": "14.2.5",
     "openapi3-ts": "^4.5.0",
+    "papaparse": "^5.5.3",
     "pdf-lib": "^1.17.1",
     "puppeteer-core": "^24.16.2",
     "qrcode": "^1.5.4",
