--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -77,6 +77,7 @@
     "swagger-ui-react": "^5.27.1",
     "tailwind-merge": "^3.3.1",
     "validator": "^13.15.15",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -89,6 +90,7 @@
     "@types/express-rate-limit": "^6.0.0",
     "@types/joi": "^17.2.3",
     "@types/node": "^20.14.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@types/validator": "^13.12.0",
