--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,13 @@
     "start": "next start -p 3001",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "test": "echo 'No tests configured for EN13813 module yet'"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --maxWorkers=2",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^12.0.0",
@@ -32,6 +38,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@sentry/nextjs": "^10.13.0",
     "@sparticuz/chromium": "^138.0.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.0",
@@ -55,6 +62,7 @@
     "ical-js-parser": "^0.7.4",
     "joi": "^18.0.0",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.539.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
@@ -77,17 +85,21 @@
     "swagger-ui-react": "^5.27.1",
     "tailwind-merge": "^3.3.1",
     "validator": "^13.15.15",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@jest/globals": "^30.1.2",
     "@jest/types": "^29.6.3",
-    "@playwright/test": "^1.48.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.5.2",
+    "@playwright/test": "^1.54.2",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/dompurify": "^3.0.5",
     "@types/express-rate-limit": "^6.0.0",
+    "@types/jest": "^30.0.0",
     "@types/joi": "^17.2.3",
     "@types/node": "^20.14.0",
     "@types/qrcode": "^1.5.5",
