--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -41,6 +41,9 @@ ENCRYPTION_KEY=your_encryption_key_here
 SESSION_TIMEOUT=3600
 CSRF_SECRET=your_csrf_secret_here
 
-# Monitoring
-SENTRY_DSN=your_sentry_dsn_here
+# Monitoring & Error Tracking
+NEXT_PUBLIC_SENTRY_DSN=your_sentry_dsn_here
+SENTRY_AUTH_TOKEN=your_sentry_auth_token_here
+SENTRY_ORG=your_sentry_org_here
+SENTRY_PROJECT=your_sentry_project_here
 LOG_LEVEL=info
