--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -92,6 +92,7 @@
     "@jest/globals": "^30.1.2",
     "@jest/types": "^29.6.3",
     "@playwright/test": "^1.54.2",
+    "@sentry/cli": "^2.55.0",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
