--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "gen:types": "supabase gen types typescript --local > apps/web/types/database.types.ts"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "prettier": "^3.6.2",
     "turbo": "^2.5.6",
-    "@types/node": "^20.0.0",
     "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
   },
-  "packageManager": "pnpm@8.14.0"
+  "packageManager": "pnpm@8.14.0",
+  "dependencies": {
+    "@sentry/nextjs": "^10"
+  }
 }
