--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^12.0.0",
+    "@e965/xlsx": "^0.20.3",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -62,11 +63,11 @@
     "ical-generator": "^9.0.0",
     "ical-js-parser": "^0.7.4",
     "joi": "^18.0.0",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.539.0",
     "moment": "^2.30.1",
-    "next": "14.2.5",
+    "next": "14.2.32",
     "openapi3-ts": "^4.5.0",
     "papaparse": "^5.5.3",
     "pdf-lib": "^1.17.1",
@@ -86,7 +87,6 @@
     "swagger-ui-react": "^5.27.1",
     "tailwind-merge": "^3.3.1",
     "validator": "^13.15.15",
-    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
