--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,61 @@
-# Supabase
-NEXT_PUBLIC_SUPABASE_URL=your-project-url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+# EN13813 Environment Variables Template
+# ⚠️  SECURITY WARNING:
+# - Copy this file to .env.local and fill in your actual values
+# - NEVER commit .env.local or any file with real secrets!
+# - Use a secret manager for production (1Password, AWS Secrets Manager, etc.)
 
-# Resend (Email)
-RESEND_API_KEY=your-resend-api-key
+# ====================
+# REQUIRED VARIABLES
+# ====================
 
-# Stripe (Payments)
-STRIPE_SECRET_KEY=your-stripe-secret-key
-STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+# Supabase Configuration
+# Get these from: https://app.supabase.com/project/YOUR_PROJECT/settings/api
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.example
+SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.example
+
+# Email Service (Resend)
+# Get from: https://resend.com/api-keys
+RESEND_API_KEY=re_example_key
+
+# ====================
+# OPTIONAL VARIABLES
+# ====================
+
+# Stripe (Payments) - if using payments
+STRIPE_SECRET_KEY=sk_test_example
+STRIPE_WEBHOOK_SECRET=whsec_example
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_example
 
 # Sentry (Error Tracking)
-SENTRY_DSN=your-sentry-dsn
+# Get from: https://sentry.io/settings/YOUR_ORG/projects/YOUR_PROJECT/keys/
+NEXT_PUBLIC_SENTRY_DSN=https://example@sentry.io/0
+SENTRY_AUTH_TOKEN=sntrys_example
 
 # PostHog (Analytics)
-NEXT_PUBLIC_POSTHOG_KEY=your-posthog-key
+NEXT_PUBLIC_POSTHOG_KEY=phc_example
 NEXT_PUBLIC_POSTHOG_HOST=https://eu.posthog.com
 
 # Upstash Redis (Caching & Rate Limiting)
-UPSTASH_REDIS_URL=your-upstash-redis-url
-UPSTASH_REDIS_TOKEN=your-upstash-redis-token
+# Get from: https://console.upstash.com/
+UPSTASH_REDIS_REST_URL=https://example.upstash.io
+UPSTASH_REDIS_REST_TOKEN=example_token
 
-# App
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+# ====================
+# APPLICATION CONFIG
+# ====================
+
+# App Settings
+NEXT_PUBLIC_APP_URL=http://localhost:3001
 NODE_ENV=development
+
+# ====================
+# SECURITY CHECKLIST
+# ====================
+# ✅ Add .env* to .gitignore (already done)
+# ✅ Use different keys for dev/staging/prod
+# ✅ Rotate keys every 90 days
+# ✅ Use secret manager for production
+# ✅ Never log or expose secrets in error messages
+# ✅ Run 'detect-secrets scan' before commits
+# ✅ Use environment-specific prefixes (dev_, staging_, prod_)
