--- a/.github/workflows/secret-scanning.yml
+++ b/.github/workflows/secret-scanning.yml
@@ -24,7 +24,7 @@ jobs:
         extra_args: --debug --only-verified
 
     - name: Detect Secrets
-      uses: reviewdog/action-detect-secrets@v1
+      uses: reviewdog/action-detect-secrets@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reporter: github-pr-review
