--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -71,6 +71,7 @@
     "openapi3-ts": "^4.5.0",
     "papaparse": "^5.5.3",
     "pdf-lib": "^1.17.1",
+    "prismjs": "^1.30.0",
     "puppeteer-core": "^24.16.2",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
