--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "packages/*",
     "modules/*"
   ],
+  "pnpm": {
+    "overrides": {
+      "prismjs": "^1.30.0"
+    }
+  },
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
