--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,12 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_example
 # Sentry (Error Tracking)
 # Get from: https://sentry.io/settings/YOUR_ORG/projects/YOUR_PROJECT/keys/
 NEXT_PUBLIC_SENTRY_DSN=https://example@sentry.io/0
+# For source map uploads (only needed for production builds)
+# Create auth token at: https://sentry.io/settings/account/api/auth-tokens/
+# Required scopes: project:releases (create/edit/delete releases)
 SENTRY_AUTH_TOKEN=sntrys_example
+SENTRY_ORG=your-org
+SENTRY_PROJECT=your-project
 
 # PostHog (Analytics)
 NEXT_PUBLIC_POSTHOG_KEY=phc_example
