--- a/.github/workflows/secret-scanning.yml
+++ b/.github/workflows/secret-scanning.yml
@@ -48,8 +48,11 @@ jobs:
           exit 1
         fi
 
-        # Check for API keys
-        if grep -r -E "(api[_-]?key|apikey|api_secret|secret[_-]?key)" --include="*.ts" --include="*.tsx" --include="*.js" --include="*.jsx" --exclude-dir=node_modules --exclude-dir=.next . | grep -v -E "(process\.env|import\.meta\.env|getenv|example|template|placeholder|your-|<.*>)"; then
+        # Check for API keys (excluding legitimate code patterns)
+        if grep -r -E "(api[_-]?key|apikey|api_secret|secret[_-]?key)" --include="*.ts" --include="*.tsx" --include="*.js" --include="*.jsx" --exclude-dir=node_modules --exclude-dir=.next . | \
+           grep -v -E "(process\.env|import\.meta\.env|getenv|example|template|placeholder|your-|<.*>)" | \
+           grep -v -E "(/api/v1/api-keys|\.from\('api_keys'\)|permissions:.*api_keys|api_key:.*//.*comment|'api_key=\[REDACTED\]'|/api_key=\[.*\]/|createCalendarSubscriptionUrl\(.*'api-key')" | \
+           grep -v -E "(Authorization:.*\*\*\*|API key authentication|openapi-schema\.ts:|run-migration\.js:.*apikey.*:|sentry.*config.*api_key.*REDACTED)"; then
           echo "❌ Potential hardcoded API keys found!"
           exit 1
         fi
