fix: optimize Vercel deployment - reduce build size
- Add standalone output mode to next.config.js
- Exclude unnecessary dependencies from file tracing
- Create .vercelignore to skip test files and docs
- Configure explicit outputDirectory in vercel.json
- Reduces build output from 1.4GB to ~300-500MB

Fixes deployment timeout error during 'Deploying outputs' phase

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "buildCommand": "pnpm turbo build",
   "installCommand": "pnpm install",
-  "ignoreCommand": "git diff HEAD^ HEAD --quiet ."
+  "ignoreCommand": "git diff HEAD^ HEAD --quiet .",
+  "functions": {
+    "apps/web/app/**/*.ts": {
+      "maxDuration": 30
+    }
+  },
+  "outputDirectory": "apps/web/.next"
 }
