chore: improve .vercelignore patterns for better size reduction
Add wildcards to exclude all platform-specific build tools (@swc, @esbuild) that aren't needed in Vercel deployment.

--- a/.vercelignore
+++ b/.vercelignore
@@ -25,10 +25,12 @@ scripts/setup-*.js
 .DS_Store
 
 # Large dependencies (not needed at runtime)
-node_modules/@playwright
-node_modules/playwright-core
-node_modules/canvas/build
-node_modules/puppeteer-core/.local-chromium
+node_modules/@playwright/**
+node_modules/playwright-core/**
+node_modules/puppeteer-core/.local-chromium/**
+node_modules/@swc/core-*/**
+node_modules/@esbuild/**
+node_modules/esbuild/**
 
 # Migration files
 **/migrations/*.sql
