fix: prevent .vercelignore from excluding lib/supabase
Changed 'supabase/' to '/supabase/' to only exclude the root Supabase CLI directory, not the lib/supabase application code.

--- a/.vercelignore
+++ b/.vercelignore
@@ -32,9 +32,9 @@ node_modules/@swc/core-*/**
 node_modules/@esbuild/**
 node_modules/esbuild/**
 
-# Migration files
+# Migration files and Supabase CLI directory (not lib/supabase!)
 **/migrations/*.sql
-supabase/
+/supabase/
 
 # Git
 .git/
